# jira-to-spreadsheet

./: Cargo.toml  logs_ordered.csv  text.xlsx  worklogs.csv
src/: main.rs  worklogs.csv
