[package]
name = "jira-to-spreadsheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.1", features = ["derive"] }
csv = "1.2.2"
humantime = "2.1.0"
itertools = "0.10.5"
